examples/test/testpolicy6944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6944
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key29: value10
      key14: value36
      key22: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value48
          key33: value36
          key43: value20
